Add frontend payment metode and change js in main

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,7 +19,8 @@
 
 
     <footer class="footer">
-        <a href="" target="_blank">Paid Version</a>
+        <!-- Updated href attribute to point to "card.html" -->
+        <a href="html/card.html" target="_blank">Paid Version</a>
     </footer>
 
     <script src="js/conditions.js" type="module"></script>
